# page_the_ripper

./: .gitignore  CLAUDE.md  Makefile  README.md  TEST_PLAN.md  install.sh  main.py  pyproject.toml  requirements.txt  scan_local.py  scanner.cfg.example  test_scanning.py
.github/workflows/: ci.yml  package.yml  release.yml
debian/: build.sh  conffiles  control  detect-scanners  page-the-ripper.service  postinst  postrm  prerm  requirements-runtime.txt
tests/: test_escl_scan.py  test_image_helpers.py  test_job_store.py  test_pdf_features.py  test_scanning.py
tools/: _escl-scan.py  escl_scan.py  scan_cli.py
ui/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
ui/src/: App.tsx  api.ts  index.css  main.tsx
ui/src/components/: ErrorCard.tsx  Icon.tsx  Spinner.tsx  StatusBadge.tsx  Tags.tsx
ui/src/hooks/: useScanners.ts
ui/src/lib/: format.ts  rotateImage.ts
ui/src/pages/: CompositePage.tsx  CropPage.tsx  JobsPage.tsx  NewScanPage.tsx  ScannersPage.tsx  SystemPage.tsx
